<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgot_title"
        android:textSize="18sp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:layout_marginTop="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgot_description"
        android:textSize="16sp"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"/>

    <EditText
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:id="@+id/email"
        android:hint="@string/email"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:layout_gravity="center_horizontal"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cancel_button"
            android:text="@string/cancel_button"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            style="@style/Base.Widget.AppCompat.Button.Borderless"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/accept_button"
            android:text="@string/accept_button"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_marginStart="20dp"/>
    </LinearLayout>
</LinearLayout>