<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.oscarruiz.misseries.activities.RegisterActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/loading_layout"
        android:visibility="gone">
        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:translationZ="1dp"/>
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:text="@string/register"
        android:textSize="25sp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:background="@color/colorAccent"
        android:gravity="center_vertical"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_vertical">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/nick"
            android:hint="@string/nick"
            android:inputType="text"
            android:maxLines="1"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/email"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/register_button"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:text="@string/register_button"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/registered_button"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:text="@string/registered"
            android:textColor="@color/colorPrimaryDark"
            android:layout_gravity="end"
            android:layout_marginTop="40dp"/>

    </LinearLayout>
</LinearLayout>
