<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.oscarruiz.misseries.activities.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/loading_layout"
        android:visibility="gone"
        android:background="@color/transparent_white">
        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:translationZ="1dp" />
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:text="@string/login"
        android:textSize="25sp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:background="@color/colorAccent"
        android:gravity="center_vertical"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_vertical">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/email"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/password"
        android:hint="@string/password"
        android:maxLines="1"
        android:inputType="textPassword"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/login_button"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:text="@string/login_button"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/not_registered_button"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:text="@string/not_registered"
        android:textColor="@color/colorPrimaryDark"
        android:layout_gravity="end"
        android:layout_marginTop="40dp"/>
    </LinearLayout>
</LinearLayout>
