<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.oscarruiz.misseries.activities.AddSerie"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/colorAccent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/add_serie_header"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:textSize="20sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="20"
                android:text="@string/type_title"
                android:textSize="16sp" />
            <EditText
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_weight="80"
                android:id="@+id/title"
                android:inputType="text"
                android:maxLines="1"
                android:textSize="16sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type_season"
                android:textSize="16sp" />
            <EditText
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:id="@+id/season"
                android:layout_marginStart="10dp"
                android:textSize="16sp"
                android:maxLines="1"
                android:inputType="number"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type_chapter"
                android:textSize="16sp" />
            <EditText
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:id="@+id/chapter"
                android:layout_marginStart="25dp"
                android:textSize="16sp"
                android:maxLines="1"
                android:inputType="number"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="80dp"
            android:gravity="center_horizontal">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/save_button"
                android:text="@string/save_button"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:textSize="16sp"
                style="@style/Base.Widget.AppCompat.Button.Borderless" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cancel_button"
                android:text="@string/cancel_button"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:textSize="16sp"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:layout_marginStart="30dp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
